--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Web Development Template</title>
+    <title>Play Anywhere Bingo</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
 
     <!-- Bootstrap core CSS -->
@@ -23,6 +23,9 @@
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.min.js"></script>
 
+    <!-- CSV Parser JS -->
+    <script type="text/javascript" src="js/jquery.csv.js"></script>
+
     <!-- Custom JS -->
     <script src="js/scripts.js" type="text/javascript"></script>
 
@@ -31,12 +34,16 @@
   <body>
     <div class="container">
       <header>
-        <h1>Epicodus Project Template</h1>
+        <h1>Play Anywhere Bingo</h1>
       </header>
-      <h2>Hello World!</h2>
-      <p>
-        This is a nice little index file.  It calls in five different files to support Bootstrap, JQuery, and your custom css and js.
-      </p>
+      <div id="page-wrapper">
+      <h1>Text File Reader</h1>
+        <div>
+           Select a text file:
+          <input type="file" id="fileInput">
+        </div>
+        <pre id="fileDisplayArea"></pre>
+      </div>
       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
       </footer>
