style html with css to create board

--- a/form-input.html
+++ b/form-input.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blank Form</title>
+    <title>Play Anywhere Bingo</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
 
     <!-- Bootstrap core CSS -->
@@ -31,18 +31,9 @@
   <body>
     <div class="container">
       <header>
-        <h1>Form Name</h1>
+        <h1>play anywhere bingo</h1>
       </header>
-      <form id="input">
-        <div class="form-group">
-          <label for="blank">Enter a value</label>
-          <input type="text" class="form-control" id="blank" placeholder=" ">
-        </div>
-        <button type="submit" name="button">Submit</button>
-      </form>
-      <div id="output">
 
-      </div>
       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
       </footer>
