--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Custom JS -->
     <script src="js/scripts.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-  </head>
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>  </head>
 
   <body>
 
@@ -40,7 +40,7 @@
     </div>
     <div class="container">
       <div id="page-wrapper">
-      <h1>Text File Reader</h1>
+      <h2>Text File Reader</h2>
         <div>
            Select a text file:
           <input type="file" id="fileInput">
@@ -50,9 +50,9 @@
     </div>
 
     <div class="container-fluid">
-      <div class = "col-md-6">
+      <div class = "col-md-6 center">
       <div class ="row board">
-        <h2>player1</h2>
+        <h2>player 1</h2>
         <div class="square">
           <div class="content" id="1">
 
@@ -60,7 +60,7 @@
         </div>
         <div class="square">
             <div class="content" id="2">
-              <p>hello</p>
+              <p>tatoos</p>
             </div>
         </div>
         <div class="square">
@@ -206,9 +206,9 @@
 
 
 
-      <div class = "col-md-6">
+      <div class = "col-md-6 center">
       <div class ="row board">
-        <h2>player2</h2>
+        <h2>player 2</h2>
 
         <div class="square">
             <div class="content" id="1">
