--- a/index.html
+++ b/index.html
@@ -50,16 +50,11 @@
       <div class = "col-md-6">
         <div class ="row board">
           <h2>player1</h2>
-          <div class="square">
 
-              <div class="content" id="1">
-
-              </div>
-          </div>
         </div>
       </div>
       <div class = "col-md-6">
-      <div class ="row board">
+      <!-- <div class ="row board">
         <h2>player2</h2>
 
         <div class="square">
@@ -209,7 +204,7 @@
 
             </div>
         </div>
-        </div>
+        </div> -->
       </div>
     </div>
       <footer>
