--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
     <script src="js/scripts.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>  </head>
-
+    <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   <body>
 
 
-    <div class="jumbotron">
-      <h1>Play Bingo Anywhere</h1>
+    <div class="jumbotron container-fluid">
+
     </div>
+
     <div class="container">
-      <h1>Text File Reader</h1>
-      <div>
+
+      <h1 class="header">Text File Reader</h1>
+      <div class="text-file">
+         <div class="select">
          Select a text file:
-        <input type="file" id="fileInput">
+       </div>
+        <input  type="file" id="fileInput">
 
       </div>
     </div>
