allow merge with updated styles

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class = "col-md-6">
-      <!-- <div class ="row board">
+      <div class ="row board">
         <h2>player2</h2>
 
 
@@ -207,7 +207,7 @@
 
             </div>
         </div>
-        </div> -->
+        </div>
       </div>
     </div>
       <footer>
