--- a/index.html
+++ b/index.html
@@ -53,166 +53,11 @@
 
     <div class="container-fluid">
 
-      <div class = "col-md-6">
         <div class ="row board">
-          <h2>player1</h2>
+          <h2>Bingo Board</h2>
 
         </div>
-      </div>
-      <div class = "col-md-6">
-      <div class ="row board">
-        <h2>player2</h2>
 
-
-        <div class="square">
-            <div class="content" id="1">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="2">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="3">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="4">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="5">
-
-            </div>
-        </div>
-      </div>
-
-      <div class ="row">
-        <div class="square">
-            <div class="content" id="6">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="7">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="8">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="9">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="10">
-
-            </div>
-        </div>
-      </div>
-
-      <div class ="row">
-        <div class="square">
-            <div class="content" id="11">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="12">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="13">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="14">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="15">
-
-            </div>
-        </div>
-      </div>
-
-      <div class ="row">
-        <div class="square">
-            <div class="content" id="16">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="17">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="18">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="19">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="20">
-
-            </div>
-        </div>
-      </div>
-
-      <div class ="row">
-        <div class="square">
-            <div class="content" id="21">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="22">
-
-            </div>
-        </div>
-        <div class="square">
-            <div class="content" id="23">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="24">
-
-            </div>
-        </div>
-
-        <div class="square">
-            <div class="content" id="25">
-
-            </div>
-        </div>
-        </div>
-      </div>
     </div>
       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
