center player board

--- a/index.html
+++ b/index.html
@@ -41,24 +41,23 @@
 
     <div class="container">
 
-      <h1 class="header">Text File Reader</h1>
+      <h1 class="header">Upload a text file to play Bingo</h1>
       <div class="text-file">
          <div class="select">
          Select a text file:
        </div>
         <input  type="file" id="fileInput">
-
       </div>
     </div>
 
-    <div class="container-fluid">
-
+    <div class="container">
+      <div class="board-container">
         <div class ="row board">
           <h2>Bingo Board</h2>
-
         </div>
-
+      </div>
     </div>
+
       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
       </footer>
