show a blank board

--- a/index.html
+++ b/index.html
@@ -51,13 +51,145 @@
     </div>
 
     <div class="container">
-      <div class="board-container">
-        <div class ="row board">
-          <h2>Bingo Board</h2>
+      <div class ="row board">
+        <h2>Bingo Board</h2>
+        <div class="row">
+          <div class="square">
+            <div class="content" id="0" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="1" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="2" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="3" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="4" data-value='0'>
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content" id="5" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="6" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="7" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="8" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="9" data-value='0'>
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content" id="10" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="11" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="12" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="13" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="14" data-value='0'>
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content" id="15" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="16" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="17" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="18" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="19" data-value='0'>
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content" id="20" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="21" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="22" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="23" data-value='0'>
+
+            </div>
+          </div>
+          <div class="square">
+            <div class="content" id="24" data-value='0'>
+
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
       </footer>
