--- a/index.html
+++ b/index.html
@@ -55,136 +55,236 @@
         <h2>Bingo Board</h2>
         <div class="row">
           <div class="square">
-            <div class="content" id="0" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="0" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="1" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="1" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="2" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="2" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="3" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="3" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="4" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="4" data-value='0'>
 
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square">
-            <div class="content" id="5" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="6" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="7" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="8" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="9" data-value='0'>
-
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="square">
-            <div class="content" id="10" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="5" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="11" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="6" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="12" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="7" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="13" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="8" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="14" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="9" data-value='0'>
 
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="square">
-            <div class="content" id="15" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="16" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="17" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="18" data-value='0'>
-
-            </div>
-          </div>
-          <div class="square">
-            <div class="content" id="19" data-value='0'>
-
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="square">
-            <div class="content" id="20" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="10" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="21" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="11" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="22" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="12" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="23" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="13" data-value='0'>
 
+                </div>
+              </div>
             </div>
           </div>
           <div class="square">
-            <div class="content" id="24" data-value='0'>
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="14" data-value='0'>
 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="15" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="16" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="17" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="18" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="19" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="20" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="21" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="22" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="23" data-value='0'>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="square">
+            <div class="content">
+              <div class="table">
+                <div class="table-cell" id="24" data-value='0'>
+
+                </div>
+              </div>
             </div>
           </div>
         </div>
