--- a/index.html
+++ b/index.html
@@ -190,8 +190,26 @@
         </div>
       </div>
     </div>
-      <footer>
-        <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
-      </footer>
+
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+          </div>
+          <div class="modal-body">
+            <h4>Congratulations!</h4>
+            <img src="img/bingowin.jpeg" alt="bingo win" />
+            <p>BINGO! Load another list to play again.</p>
+          </div>
+
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <footer>
+      <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
+    </footer>
   </body>
 </html>
