add bingo man to main body css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>  </head>
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   <body>
+    <!-- <div class="board-background" id="bingo-man"></div> -->
     <div class="container">
 
       <h1 class="header">Upload a text file to play Bingo</h1>
@@ -45,7 +46,7 @@
     </div>
 
     <div class="container">
-      <div class="board-background" id="bingo-man">
+
         <div class ="row board">
           <h2>Bingo Board</h2>
           <div class="row">
@@ -287,8 +288,7 @@
       </div>
       <!-- <img src="img/cartoon-man.png" alt="" /> -->
 
-    </div>
-      <footer>
+       <footer>
         <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
       </footer>
   </body>
