show the bingo man on top of the background

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>  </head>
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
   <body>
-    <!-- <div class="board-background" id="bingo-man"></div> -->
     <div class="container">
 
       <h1 class="header">Upload a text file to play Bingo</h1>
@@ -46,7 +45,7 @@
     </div>
 
     <div class="container">
-
+      <div class="board-background" id="bingo-man"><div>
         <div class ="row board">
           <h2>Bingo Board</h2>
           <div class="row">
