make reset game button

--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
           </div>
         </div>
       </div>
+      <button id="newGame" type="button" class="btn btn-primary">Play a New Game</button>
     </div>
 
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
@@ -302,6 +303,7 @@
             <h4>Congratulations!</h4>
             <img src="img/bingowin.jpeg" alt="bingo win" />
             <p>BINGO! Load another list to play again.</p>
+
           </div>
 
         </div><!-- /.modal-content -->
