add speech bubble instructions to bingo man

--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <h2 class="header">Upload a text file to play Bingo</h2>
-          <label class="file">
-            <input type="file" id="file-input">
-            <a class="btn btn-success btn-lg" role="button" id="start-button">Play now!</a>
-          </label>
+          <div class="speech">
+            <h2 class="header">Upload a text file to play Bingo</h2>
+            <label class="file">
+              <input type="file" id="file-input">
+              <a class="btn btn-success btn-lg" role="button" id="start-button">Play now!</a>
+            </label>
+          </div>
         </div>
         <div class="col-md-9">
           <div class ="row board">
-            <h2>Bingo Board</h2>
             <div class="row">
               <div class="square">
                 <div class="content">
@@ -310,8 +311,6 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-      <footer>
-        <p>&copy; 2016 Epicodus Pair Project, Inc.</p>
-      </footer>
+      
   </body>
 </html>
