show/hide reset button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <label class="file">
               <input type="file" id="file-input">
               <a class="btn btn-success btn-lg" role="button" id="start-button">Play now!</a>
+              <button id="new-game" type="button" class="btn btn-success btn-lg">Reset</button>
             </label>
           </div>
         </div>
@@ -292,7 +293,6 @@
           </div>
         </div>
       </div>
-      <button id="newGame" type="button" class="btn btn-primary">Play a New Game</button>
     </div>
 
 
