style the modal box to show a winner message so it is smaller and to the left

--- a/index.html
+++ b/index.html
@@ -304,14 +304,15 @@
 
           </div>
           <div class="modal-body">
-            <h4>Congratulations!</h4>
-            <img src="img/bingowin.jpeg" alt="bingo win" />
-            <p>BINGO! Load another list to play again.</p>
+            <p>Congratulations!
+            <img id="modalImage" src="img/bingowin.jpeg" alt="bingo win" />
+            BINGO! Load another list to play again.</p>
 
           </div>
 
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
   </body>
 </html>
