update README and page instructions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Play Anywhere Bingo</h1>
-        <p>Using the form below, upload a csv file to generate a bingo card.</p>
+        <p id="instructions">Using the form below, upload a text file to generate a bingo card.  As you see events or objects listed on the board below, mark the squares.  First to find five in a row wins.</p>
       </div>
     </div>
     <div class="container">
